
Dec 15, 2006 - chris
o started the port to MS Windows; so far, there are only two batch
    files to create the library, but no nmake file or Visual Studio 
    project.
o started to move the stuff to automake/autoconf; transition is not
    yet complete

Dec 10, 2006 - chris 
o a new parameter HAM_OPTIMIZE_SIZE creates smaller files by merging 
    freelist entries (comes at a small performance penalty)

Nov 26, 2006 - chris 
o extended keys are now cached (if the cache size is big enough) 

Nov 24, 2006 - chris 
o added HAM_DISABLE_FREELIST_FLUSH - when a freelist page is modified, it 
    is no longer flushed immediately. this is dangerous - in case of a 
    crash, the database is most likely broken.

Nov 23, 2006 - chris 
o fixed a small leak - if records are overwritten, and the new record size
    is smaller then sizeof(ham_offset_t), the old blob was not added to 
    the freelist

Nov 22, 2006 - chris 
o completely rewrote the freelist - elements are now sorted, and access is 
    a lot faster. also, elements are merged, if possible, which 
    results in smaller files
o fixed a bug; if the root page is split, the address of the root page
    was not stored correctly in the database header

Nov 12, 2006 - chris 
o completely rewrote the blob storage - blobs are now stored in one big 
    chunk, and not splitted into pages
o replaced read/write with pread/pwrite
o fixed a small bug related to a performance improvement on Nov 5th
    (removed too many memset's...)

Nov 09, 2006 - chris 
o fetching in-memory-blobs created a memory leak if the record data 
    was allocated by the user

Nov 07, 2006 - chris 
o blobs which were overwritten (and therefore were deleted) were not 
    added to the freelist

Nov 05, 2006 - chris 
o fixed a tiny memory leak in blob_erase
o replaced linear search in btree_get_slot and btree_insert with 
    binary search, got significant performance improvements
o removed some unnecessary memsets, after allocating a new page