@@ -3,6 +3,12 @@ SUBDIRS = src samples tests
 
 EXTRA_DIST = documentation/Doxyfile 
 
+EXTRA_DIST += include/ham/hamsterdb.h \
+          	 include/ham/hamsterdb_int.h \
+             include/ham/types.h 
+
+EXTRA_DIST += src/*
+
 doc:
 	doxygen documentation/Doxyfile
 
