@@ -10,19 +10,11 @@ else
     AM_CFLAGS += -DHAM_LITTLE_ENDIAN
 endif
 
-# debug or release mode? release mode: don't use optimization if gcc 
-# version is < 4.1.1; all other GCC builds: disable all predefined flags
-# to get rid of optimization
-if USING_GCC
-    CFLAGS     =
-endif
+# debug or release mode? 
 if DEBUG
     AM_CFLAGS += -DDEBUG -DHAM_DEBUG
 else
-    AM_CFLAGS += -DHAM_RELEASE -ffast-math
-if ENABLE_GCC_OPTIMIZATION
-    AM_CFLAGS += -O3 -ffast-math
-endif
+    AM_CFLAGS += -DHAM_RELEASE 
 endif
 
 # use profiling?
@@ -34,4 +26,10 @@ lib_LTLIBRARIES = libhamsterdb.la
 
 libhamsterdb_la_SOURCES = blob.c btree.c btree_check.c btree_enum.c btree_erase.c btree_find.c btree_insert.c cache.c db.c error.c extkeys.c freelist.c hamsterdb.c keys.c mem.c os_posix.c page.c txn.c util.c
 
-libhamsterdb_la_LDFLAGS = -version-info 0:1:0
+libhamsterdb_la_LDFLAGS = -version-info 0:3:0
+
+#lib_LIBRARIES = libhamsterdb.a
+
+#libhamsterdb_a_SOURCES = blob.c btree.c btree_check.c btree_enum.c btree_erase.c btree_find.c btree_insert.c cache.c db.c error.c extkeys.c freelist.c hamsterdb.c keys.c mem.c os_posix.c page.c txn.c util.c
+
+#libhamsterdb_a_LDFLAGS = -version-info 0:1:0
