@@ -17,15 +17,15 @@ extern "C" {
  * the version numbers
  *
  * @remark a change of the major revision means a significant update with
- * a lot of new features. the minor revision means that updates were not
- * so significant, but the database format is no longer compatible.
- * a change of the revision means the release is a bugfix with a 
- * compatible database format.
+ * a lot of new features, API changes and an incompatible database format. 
+ * the minor revision means that updates were not so significant, but 
+ * the database format is no longer compatible. a change of the revision 
+ * means the release is a bugfix with a compatible database format.
  */
 #define HAM_VERSION_MAJ 0
-#define HAM_VERSION_MIN 0
-#define HAM_VERSION_REV 1
-#define HAM_VERSION_STR "0.0.1"
+#define HAM_VERSION_MIN 3
+#define HAM_VERSION_REV 0
+#define HAM_VERSION_STR "0.3.0"
 
 
 #ifdef __cplusplus
