@@ -1,3 +1,5 @@
+Dec 19, 2006 - chris ---------------------------------------------------
+                      release of hamsterdb-0.3
 
 Dec 15, 2006 - chris
 o started the port to MS Windows; so far, there are only two batch
